fix gap between header and main content

--- a/src/assets/styles/scss/common/theme-customizing.scss
+++ b/src/assets/styles/scss/common/theme-customizing.scss
@@ -93,5 +93,5 @@
 
 body .topbar + .main-container,
 body .topbar + main {
-  padding-top: 0;
+  padding-top: size(1);
 }
